# Beckhoff-Comm-Service

./: Beckhoff_Communication_Service.cpp  Beckhoff_Communication_Service.h  Facade_Beckhoff_Communication_Service.cpp  Facade_Beckhoff_Communication_Service.h  ReadMe.txt
Cross_Compile/: CMakeLists.txt
Cross_Compile/libethercat/: ethercattype.h.gch  osal.c
SoftwareAGV/: CMakeLists.txt
SoftwareAGV/libethercat/: ethercat.h.gch  ethercattype.h.gch  teste.cpp
SoftwareAGV/src/Services/BeckhoffCommunicationService/: BeckhoffIOAddrs.h  Beckhoff_Communication_Service.cpp  Beckhoff_Communication_Service.h  Facade_Beckhoff_Communication_Service.cpp  Facade_Beckhoff_Communication_Service.h
SoftwareAGV/src/Softwares/MaintenanceSoftware/: MaintenanceSoftware.cpp  MaintenanceSoftware.h
SoftwareAGV/src/SuperMain/: main.cpp
read_write_digital_tests/: Newreadwrite.cpp  main.cpp  rd  readwrite.cpp
